Bug 89926 - FILEOPEN: gradient in .pptx reversed
Summary: FILEOPEN: gradient in .pptx reversed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.4.1.2 release
Hardware: Other All
: medium normal
Assignee: Paul Trojahn
URL:
Whiteboard: target:6.0.0
Keywords: filter:pptx
Depends on:
Blocks:
 
Reported: 2015-03-10 10:04 UTC by Andrei Cristian Petcu
Modified: 2017-07-17 12:53 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Document with upside down gradient (3.16 MB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2015-03-10 10:04 UTC, Andrei Cristian Petcu
Details
Gradient in MS Office (2.85 MB, image/png)
2015-03-10 10:05 UTC, Andrei Cristian Petcu
Details
Gradient on LibreOffice (2.05 MB, image/png)
2015-03-10 10:07 UTC, Andrei Cristian Petcu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrei Cristian Petcu 2015-03-10 10:04:04 UTC
Created attachment 114005 [details]
Document with upside down gradient

Hello, 

The gradient in this PPTX file is shown upside down in LibreOffice compared to the way it is showed in MicroSoft office and in Google Documents. Please see the print screens and the file.
Comment 1 Andrei Cristian Petcu 2015-03-10 10:05:50 UTC
Created attachment 114006 [details]
Gradient in MS Office
Comment 2 Andrei Cristian Petcu 2015-03-10 10:07:07 UTC
Created attachment 114007 [details]
Gradient on LibreOffice
Comment 3 Andrei Cristian Petcu 2015-03-10 10:14:45 UTC
Can this be a duplicate of bug #72567 ?
Comment 4 A (Andy) 2015-03-11 21:58:00 UTC
Reproducible with LO 4.4.1.2, Win 8.1
Comment 5 Xisco Faulí 2015-09-04 11:30:12 UTC
This issue is still present in

Version: 5.0.1.2
Build ID: 81898c9f5c0d43f3473ba111d7b351050be20261
Locale: es-ES (es_ES)

on Windows 7 (64-bit)
Comment 6 QA Administrators 2016-09-20 10:29:56 UTC Comment hidden (obsolete)
Comment 7 Timur 2016-10-13 18:01:28 UTC
Still there in 5.3+
Comment 8 Xisco Faulí 2017-07-12 08:59:00 UTC
patch submitted to gerrit: https://gerrit.libreoffice.org/#/c/39648/
Comment 9 Commit Notification 2017-07-17 10:12:49 UTC
Paul Trojahn committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=41f098c0a2363f7607516a9fe20706ad4201b45c

tdf#89926 Fix OOXML gradient angle import

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.