tdf#89926 Fix OOXML gradient angle import

Change-Id: I3a13cb268af41a55cd8b9df3084d028008aed4f2